--- a/03/search.html
+++ b/03/search.html
@@ -6,13 +6,19 @@
   <title>Daum 검색</title>
 </head>
 <body>
-
 <div id="divWrap">
-<input name="searchString" placeholder=" 검색어를 입력해 주세요 "></input>
-<button id="searchButton">검색</button>
 <div id="divSearch">
+
+<input id="searchInput" placeholder=" 검색어를 입력해 주세요 "></input>
+<button id="searchButton">검색</button>
+
+</div>
+<div id="divResult">
+</div>
+<div id="divMore">
 </div>
 </div>
+
 
 <script type="text/template" id="listTemplate">
 <ul>
