남은 시간 추가

--- a/08/index.html
+++ b/08/index.html
@@ -10,6 +10,7 @@
 <div class="divScore">
 <h1>Card Game</h1>
 <p id ="score">점수 : 0</p>
+<p id ="time"></p>
 </div>
 <div class="divBoard">	
 	<img class="imgCard"></img>
@@ -25,6 +26,7 @@
 </div>
 
 <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
+<script src="util.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
